--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
 		</head>
 		<body>
 		
-			<nav  class="bg-white border-gray-200 dark:bg-gray-900">
+			<nav class="bg-slate-100 border-gray-200 dark:bg-gray-900">
 			<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 				<a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
 					<span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">xoid.net</span>
