--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,22 +1,22 @@
 ---
 layout: default
 ---
-
-<div class="max-w-3xl mx-auto">
-  <main>
-    <article class="relative pt-10">
-      <h1 class="text-2xl font-extrabold tracking-tight text-slate-900 dark:text-slate-200 md:text-3xl ">
-        {{ page.title}}
-      </h1>
+<!-- adding container here makes it so that my code blocks don't overflow! -->
+<div class="container mx-auto">
+  <main class="mx-auto">
+    <article class="relative pt-5 mx-auto max-w-prose">
       <div class="text-sm leading-6">
         <dl>
           <dt class="sr-only">Date</dt>
-          <dd class="absolute top-0 inset-x-0 text-slate-700 dark:text-slate-400"><time
+          <dd class="text-slate-700 dark:text-slate-400"><time
               datetime="2024-06-21T15:00:00.000Z">{{ page.date | date_to_string }}</time></dd>
         </dl>
       </div>
-      <div class="mt-12 prose prose-zinc dark:prose-invert">
-        {{ content }} 
+      <div class="prose prose-zinc dark:prose-invert pt-2">
+        <h1 class="text-xl font-extrabold tracking-tight text-slate-900 dark:text-slate-200 md:text-2xl ">
+          {{ page.title}}
+        </h1>
+        {{ content }}
       </div>
     </article>
   </main>
