--- a/css/main.css
+++ b/css/main.css
@@ -4,18 +4,6 @@
 
 
 @layer base {
-    h1 {
-        @apply text-3xl;
-    }
-    h2 {
-        @apply text-3xl dark:text-white
-    }
-    h3 {
-        @apply text-lg dark:text-white
-    }
-    p {
-        @apply text-lg mt-4 dark:text-white;
-    }
 }
 
 @layer components {
@@ -28,6 +16,9 @@
     }
     .page-title {
         @apply mb-4 text-3xl sm:text-4xl tracking-tight text-slate-900 font-extrabold dark:text-slate-200
+    }
+    .footer-item {
+        @apply px-4 py-2 md:px-0
     }
 }
 
