--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@
 	<div class="md:max-w-screen-xl sm:max-w-full flex flex-wrap items-center mx-auto p-4">
 		{{ content }}
 	</div><!-- /.container -->
-	<footer class="md:max-w-screen-xl sm:max-w-full flex flex-wrap items-center mx-auto border-t-2 border-gray-300 pt-2">
+	<footer class="md:max-w-screen-xl sm:max-w-full flex flex-wrap items-center mx-auto border-t-2 border-gray-300 pt-2 pb-8">
 		<div class="w-full md:block md:w-auto" id="navbar-default">
 			<ul class="font-light text-xs text-gray-500 flex flex-col md:pl-4 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0  dark:text-zinc-600 font-semibold">
 				<li class="footer-item"><a href="https://github.com/ckhordiasma">github/ckhordiasma</a></li>
