--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1222,6 +1222,10 @@ select {
   padding-top: 2rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
