--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
 
     }
     .page-title {
-        @apply mb-4 text-3xl sm:text-4xl tracking-tight text-slate-900 font-extrabold dark:text-slate-200
+        @apply mb-4 text-3xl sm:text-4xl text-slate-900 font-bold dark:text-slate-200
     }
     .footer-item {
         @apply px-4 py-2 md:px-0
