--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -1210,6 +1210,10 @@ select {
   padding-bottom: 7rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1222,8 +1226,8 @@ select {
   padding-top: 2rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
+.text-center {
+  text-align: center;
 }
 
 .text-2xl {
@@ -2266,8 +2270,7 @@ select {
   margin-bottom: 1rem;
   font-size: 1.875rem;
   line-height: 2.25rem;
-  font-weight: 800;
-  letter-spacing: -0.025em;
+  font-weight: 700;
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity));
 }
@@ -2472,10 +2475,6 @@ select {
   .sm\:pb-12 {
     padding-bottom: 3rem;
   }
-
-  .sm\:text-center {
-    text-align: center;
-  }
 }
 
 @media (min-width: 768px) {
@@ -2548,10 +2547,6 @@ select {
     border-width: 0px;
   }
 
-  .md\:p-0 {
-    padding: 0px;
-  }
-
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -2561,20 +2556,8 @@ select {
     padding-left: 2.5rem;
   }
 
-  .md\:pl-2 {
-    padding-left: 0.5rem;
-  }
-
   .md\:pl-4 {
     padding-left: 1rem;
-  }
-
-  .md\:pt-8 {
-    padding-top: 2rem;
-  }
-
-  .md\:pt-4 {
-    padding-top: 1rem;
   }
 
   .md\:text-2xl {
@@ -2630,16 +2613,6 @@ select {
 }
 
 @media (prefers-color-scheme: dark) {
-  .dark\:border-gray-700 {
-    --tw-border-opacity: 1;
-    border-color: rgb(55 65 81 / var(--tw-border-opacity));
-  }
-
-  .dark\:border-gray-900 {
-    --tw-border-opacity: 1;
-    border-color: rgb(17 24 39 / var(--tw-border-opacity));
-  }
-
   .dark\:bg-gray-950 {
     --tw-bg-opacity: 1;
     background-color: rgb(3 7 18 / var(--tw-bg-opacity));
@@ -2667,11 +2640,6 @@ select {
 
   .dark\:fill-slate-900 {
     fill: #0f172a;
-  }
-
-  .dark\:text-gray-200 {
-    --tw-text-opacity: 1;
-    color: rgb(229 231 235 / var(--tw-text-opacity));
   }
 
   .dark\:text-gray-400 {
@@ -2721,10 +2689,6 @@ select {
   .dark\:focus\:ring-gray-600:focus {
     --tw-ring-opacity: 1;
     --tw-ring-color: rgb(75 85 99 / var(--tw-ring-opacity));
-  }
-
-  .group:hover .dark\:group-hover\:bg-slate-800\/50 {
-    background-color: rgb(30 41 59 / 0.5);
   }
 
   .group:hover .dark\:group-hover\:bg-zinc-900\/50 {
